- Resolved issue with navigation jumping due to size of document changing when toggling fixed navigation state

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -47,6 +47,7 @@ nav.nav-secondary {
 	color: #ffffff;
 	width: 100%;
 	z-index: 1;
+	position: absolute;
 }
 
 nav.nav-secondary .nav-secondary-branding {
